--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="px-5 navbar navbar-expand-lg navbar-dark">
             <div class="px-5 container-fluid">
-                <a class="pb-2 pt-0 navbar-brand" href="#">
+                <a class="pb-2 pt-0 navbar-brand" href="index.html">
                     <img src="img/codoacodo.png" alt="codo a codo logo" width="100">
                     Conf Bs As</a>
                 <div class="collapse navbar-collapse justify-content-end">
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#">Conviértete en orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="comprarTicket" href="#">Comprar tickets</a>
+                            <a class="nav-link" id="comprarTicket" href="#" onclick="comprarTickets()">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
@@ -41,6 +41,7 @@
         </nav>
     </header>
 
+<section id="section">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item bg-dark active">
@@ -55,7 +56,7 @@
                             nivel que tenemos para ti. Te esperamos!
                         </p>
                         <button type="button" class="btn btn-1 btn-outline-light">Quiero ser orador</button>
-                        <button type="button" class="btn btn-2 btn-success" id="botonComprar">Comprar Tickets</button>
+                        <button type="button" class="btn btn-2 btn-success" id="botonComprar" onclick="comprarTickets()">Comprar Tickets</button>
                     </div>
                 </div>
             </div>
@@ -71,7 +72,7 @@
                             nivel que tenemos para ti. Te esperamos!
                         </p>
                         <button type="button" class="btn btn-1 btn-outline-light">Quiero ser orador</button>
-                        <button type="button" class="btn btn-2 btn-success" id="comprar">Comprar Tickets</button>
+                        <button type="button" class="btn btn-2 btn-success" id="botonComprar" onclick="comprarTickets()">Comprar Tickets</button>
                     </div>
                 </div>
             </div>
@@ -87,7 +88,7 @@
                             nivel que tenemos para ti. Te esperamos!
                         </p>
                         <button type="button" class="btn btn-1 btn-outline-light">Quiero ser orador</button>
-                        <button type="button" class="btn btn-2 btn-success" id="comprar">Comprar Tickets</button>
+                        <button type="button" class="btn btn-2 btn-success" id="botonComprar" onclick="comprarTickets()">Comprar Tickets</button>
                     </div>
                 </div>
             </div>            
@@ -212,6 +213,8 @@
         </div>
     </section>
 
+</section>
+
     <footer>
         <div class="container">
             <div class="row">
@@ -243,6 +246,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script src="js/app.js"></script> 
+
 
 </body>
 
